--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="container">
-            <h1>Lavanya</h1>
+            <h1>Lavanya S</h1>
             <p>B.Tech in CSBS | Sri Eshwar College Of Engineering</p>
             <p>Email: lavanya.s2023csbs@sece.ac.in | Phone: +91 73974 26640</p>
         </div>
