--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
 
     <section id="skills" class="container">
         <h2>Skills</h2>
-        <p>C, C++, Python</p>
+        <p> C
+            C++
+            Python
+            Java
+            DBMS
+            MongoDB
+        </p>
     </section>
 
     <section id="contact" class="container">
