--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <section id="skills" class="container">
         <h2>Skills</h2>
-        <p> C
-            C++
-            Python
-            Java
-            DBMS
+        <p> C,
+            C++,
+            Python,
+            Java,
+            DBMS,
             MongoDB
             
         </p>
